Automatically backed up by Learn

--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -3,6 +3,6 @@
 
 <%@doctor.appointments.each|a|%>
 <p><%=a.appointment_datetime.strftime("%B %d,%Y at %H:%M")%></p>
-<p><%=link_to a.patient.name, patient_path(a.patient)%>
+<p><%=link_to a.patient.name, patient_path(a.patient)%></p>
   <hr>
   <%end%>
