--- a/app/views/appointements/show.html.erb
+++ b/app/views/appointements/show.html.erb
@@ -1,6 +1,6 @@
-<h1>This appointments</h1>
+<h1>This appointment</h1>
 
-<p>Time</p>
+<p>Time:</p>
 <%=@appointment.appointment_datetime.strftime("%B %d, %Y at %I:%M%p")%>
 <p>Patient:</p>
 <%=link_to @appointment.patient.name, patient_path(@appointment.patient)%>
